[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nedry-lockout"
version = "0.1.2"
description = "Jurassic Park style terminal lockout animation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Sascha Kleerebezem", email = "saschakleerebezem@gmail.com" }
]

[project.scripts]
nedry = "nedry.main:main"

[tool.setuptools]
packages = ["nedry"]